discussion/kv_engine/176659/176659_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

wip

Change-Id: I0d707b894fa6b7218340c3a86fa93e8f61a80a7b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-24 17:41:40.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-24 19:05:28.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47060/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\bucket_quota_change_task.cc(63): error C4716: "BucketQuotaChangeTask::processNewQuotaChange": must return a value ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47060/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18311/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43: error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
                     /*initialSleepTime*/ INT_MAX,
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18311/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18311/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39530/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39530/ )

CMake error: CMakeLists.txt:139 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39530/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7981/ : FAILURE

Compile error at [2022-06-24T17:52:58.215Z] ../kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7981/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20182/ : FAILURE

Compile error at [2022-06-24T18:09:02.985Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:17:10:
fatal error: libmagma/magma.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20182/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21176/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeEqual/ephemeral_auto_delete":

<pre>
[ RUN      ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeEqual/ephemeral_auto_delete
[2022-06-24T18:53:25.818Z] unknown file: Failure
[2022-06-24T18:53:25.818Z] Unknown C++ exception thrown in the test body.
[2022-06-24T18:53:25.818Z] [  FAILED  ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeEqual/ephemeral_auto_delete, where GetParam() = "bucket_type=ephemeral:ephemeral_full_policy=auto_delete" (33 ms)
EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeEqual/ephemeral_auto_delete
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21176/ )

Timeout of a CTest test [2022-06-24T18:55:06.898Z] 125/420 Test #199: ep-engine_ep_unit_tests.EphemeralOrPersistent/EPEngineParamTest .........................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21176/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20528/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeEqual/ephemeral_auto_delete":

<pre>
[ RUN      ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeEqual/ephemeral_auto_delete
[2022-06-24T18:13:26.652Z] unknown file: Failure
[2022-06-24T18:13:26.652Z] C++ exception with description "Operation not permitted" thrown in the test body.
[2022-06-24T18:13:26.652Z] [  FAILED  ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeEqual/ephemeral_auto_delete, where GetParam() = "bucket_type=ephemeral:ephemeral_full_policy=auto_delete" (10 ms)
EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeEqual/ephemeral_auto_delete
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20528/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20528/ )

Timeout of a CTest test [2022-06-24T18:18:36.430Z] 446/446 Test #205: ep-engine_ep_unit_tests.EphemeralOrPersistent/EPEngineParamTest .........................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20528/ )

Test exceeded the timeout:
[2022-06-24T18:05:30.127Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20528/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19398/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [4/93]: test dcp consumer flow control dynamic...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1467 Test failed: `" (Expected `500000000", got `125829120" - Incorrect new size.)
[2022-06-24T18:42:30.247Z] (326 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19398/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28559/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28559/ )

Test exceeded the timeout:
[2022-06-24T18:30:01.529Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28559/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8082/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeEqual/ephemeral_auto_delete":

<pre>
[ RUN      ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeEqual/ephemeral_auto_delete
[2022-06-24T18:09:48.175Z] unknown file: Failure
[2022-06-24T18:09:48.175Z] C++ exception with description "Operation not permitted" thrown in the test body.
[2022-06-24T18:09:48.175Z] [  FAILED  ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeEqual/ephemeral_auto_delete, where GetParam() = "bucket_type=ephemeral:ephemeral_full_policy=auto_delete" (5 ms)
EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeEqual/ephemeral_auto_delete
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8082/ )

Timeout of a CTest test [2022-06-24T18:46:37.581Z] 447/447 Test #205: ep-engine_ep_unit_tests.EphemeralOrPersistent/EPEngineParamTest .........................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8082/ )

Test exceeded the timeout:
[2022-06-24T18:13:48.943Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8082/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17437/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
